--- a/series.conf
+++ b/series.conf
@@ -18175,6 +18175,7 @@
 	patches.arch/kvm-nvmx-pass-vmexit-parameters-to-nested_vmx_vmexit.patch
 	patches.arch/kvm-nvmx-add-tracepoints-for-nested_vmexit-and-nested_vmexit_inject.patch
 	patches.arch/kvm-nvmx-fix-nested_run_pending-on-activity-state-hlt.patch
+	patches.arch/kvm-nvmx-update-guest-activity-state-field-on-l2-exits.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
