--- a/series.conf
+++ b/series.conf
@@ -18178,6 +18178,7 @@
 	patches.arch/kvm-nvmx-update-guest-activity-state-field-on-l2-exits.patch
 	patches.arch/kvm-vmx-really-fix-lazy-fpu-on-nested-guest.patch
 	patches.arch/kvm-nvmx-rework-interception-of-irqs-and-nmis.patch
+	patches.arch/kvm-nvmx-do-not-inject-nmi-vmexits-when-l2-has-a-pending-interrupt.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
