KVM: x86: Remove return code from enable_irq/nmi_window (bnc#916472).

--- a/series.conf
+++ b/series.conf
@@ -18179,6 +18179,7 @@
 	patches.arch/kvm-vmx-really-fix-lazy-fpu-on-nested-guest.patch
 	patches.arch/kvm-nvmx-rework-interception-of-irqs-and-nmis.patch
 	patches.arch/kvm-nvmx-do-not-inject-nmi-vmexits-when-l2-has-a-pending-interrupt.patch
+	patches.arch/kvm-x86-remove-return-code-from-enable_irq-nmi_window.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
