KVM: nVMX: Fix nested_run_pending on activity state HLT (bnc#916472).

--- a/series.conf
+++ b/series.conf
@@ -18174,6 +18174,7 @@
 	patches.arch/kvm-nvmx-add-support-for-activity-state-hlt.patch
 	patches.arch/kvm-nvmx-pass-vmexit-parameters-to-nested_vmx_vmexit.patch
 	patches.arch/kvm-nvmx-add-tracepoints-for-nested_vmexit-and-nested_vmexit_inject.patch
+	patches.arch/kvm-nvmx-fix-nested_run_pending-on-activity-state-hlt.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
