--- a/series.conf
+++ b/series.conf
@@ -18171,6 +18171,7 @@
 	patches.arch/nvmx-fix-pick-up-of-uninjected-nmis.patch
 	patches.arch/nvmx-report-cpu_based_virtual_nmi_pending-as-supported.patch
 	patches.arch/kvm-vmx-fix-lazy-fpu-on-nested-guest.patch
+	patches.arch/kvm-nvmx-add-support-for-activity-state-hlt.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
