dm raid: add region_size parameter (bnc#895841).

--- a/series.conf
+++ b/series.conf
@@ -14774,6 +14774,7 @@
 	patches.fixes/dm-snapshot-fix-data-corruption.patch
 	patches.fixes/dm-mpath-fix-race-condition-between-multipath_dtr-an.patch
 	patches.fixes/dm-mpath-fix-panic-on-deleting-sg-device.patch
+	patches.fixes/dm-raid-add-support-for-region-size-bnc895841.patch
 
 	########################################################
 	# md
