tty: Fix memory leak in virtual console when enable unicode translation (bnc#916515).

--- a/series.conf
+++ b/series.conf
@@ -16768,6 +16768,7 @@
 	patches.fixes/TTY-serial-fix-includes-in-some-drivers.patch
 	patches.fixes/TTY-serial-cleanup-include-file.patch
 	patches.fixes/serial_core-Fix-race-in-uart_handle_dcd_change.patch
+	patches.fixes/tty-Fix-memory-leak-in-virtual-console-when-enable-u.patch
 
 	########################################################
 	# Other driver fixes
