--- a/series.conf
+++ b/series.conf
@@ -14399,6 +14399,7 @@
 	patches.fixes/TTY-serial-cleanup-include-file.patch
 	patches.fixes/serial_core-Fix-race-in-uart_handle_dcd_change.patch
 	patches.fixes/tty-Fix-memory-leak-in-virtual-console-when-enable-u.patch
+	patches.fixes/vt-push-the-tty_lock-down-into-the-map-handling.patch
 
 	########################################################
 	# Other driver fixes
