fuse: add flag fc->initialized (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1765,6 +1765,7 @@
 	patches.suse/fuse-0015-fuse-optimize-__fuse_direct_io.patch
 	patches.suse/fuse-0016-fuse-cleanup-fuse_direct_io.patch
 	patches.suse/fuse-0017-fuse-make-request-allocations-for-background-process.patch
+	patches.suse/fuse-0018-fuse-add-flag-fc-initialized.patch
 
 	########################################################
 	# IPC patches
