fuse: add per-page descriptor <offset, length> to fuse_req (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1758,6 +1758,7 @@
 	patches.suse/fuse-0008-fuse-rework-fuse_readpages.patch
 	patches.suse/fuse-0009-fuse-rework-fuse_perform_write.patch
 	patches.suse/fuse-0010-fuse-rework-fuse_do_ioctl.patch
+	patches.suse/fuse-0011-fuse-add-per-page-descriptor-offset-length-to-fuse_r.patch
 
 	########################################################
 	# IPC patches
