fuse: truncate file if async dio failed (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1774,6 +1774,7 @@
 	patches.suse/fuse-0024-fuse-make-fuse_direct_io-aware-about-AIO.patch
 	patches.suse/fuse-0025-fuse-enable-asynchronous-processing-direct-IO.patch
 	patches.suse/fuse-0026-fuse-optimize-short-direct-reads.patch
+	patches.suse/fuse-0027-fuse-truncate-file-if-async-dio-failed.patch
 
 	########################################################
 	# IPC patches
