fuse: add support of async IO (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1770,6 +1770,7 @@
 	patches.suse/fuse-0020-fuse-implement-exclusive-wakeup-for-blocked_waitq.patch
 	patches.suse/fuse-0021-fuse-optimize-wake_up.patch
 	patches.suse/fuse-0022-fuse-move-fuse_release_user_pages-up.patch
+	patches.suse/fuse-0023-fuse-add-support-of-async-IO.patch
 
 	########################################################
 	# IPC patches
