fuse: do not use uninitialized i_mode (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1806,6 +1806,7 @@
 	patches.suse/fuse-0056-fuse-Fix-O_DIRECT-operations-vs-cached-writeback-mis.patch
 	patches.suse/fuse-0057-fuse-Turn-writeback-cache-on.patch
 	patches.suse/fuse-0058-fuse-fix-mtime-update-error-in-fsync.patch
+	patches.suse/fuse-0059-fuse-do-not-use-uninitialized-i_mode.patch
 
 	########################################################
 	# IPC patches
