fuse: return -EIOCBQUEUED from fuse_direct_IO() for all async requests (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1777,6 +1777,7 @@
 	patches.suse/fuse-0027-fuse-truncate-file-if-async-dio-failed.patch
 	patches.suse/fuse-0028-fuse-add-flag-to-turn-on-async-direct-IO.patch
 	patches.suse/fuse-0029-fuse-allocate-for_background-dio-requests-based-on-i.patch
+	patches.suse/fuse-0030-fuse-return-EIOCBQUEUED-from-fuse_direct_IO-for-all-.patch
 
 	########################################################
 	# IPC patches
