fuse: fuse_flush() should wait on writeback (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1802,6 +1802,7 @@
 	patches.suse/fuse-0052-fuse-Flush-files-on-wb-close.patch
 	patches.suse/fuse-0053-fuse-restructure-fuse_readpage.patch
 	patches.suse/fuse-0054-fuse-Implement-write_begin-write_end-callbacks.patch
+	patches.suse/fuse-0055-fuse-fuse_flush-should-wait-on-writeback.patch
 
 	########################################################
 	# IPC patches
