fuse: Implement writepages callback (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1784,6 +1784,7 @@
 	patches.suse/fuse-0034-fuse-Prepare-to-handle-multiple-pages-in-writeback.patch
 	patches.suse/fuse-0035-fuse-lock-page-in-mkwrite.patch
 	patches.suse/fuse-0036-fuse-don-t-BUG-on-no-write-file.patch
+	patches.suse/fuse-0037-fuse-Implement-writepages-callback.patch
 
 	########################################################
 	# IPC patches
