fuse: Implement write_begin/write_end callbacks (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1801,6 +1801,7 @@
 	patches.suse/fuse-0051-fuse-Trust-kernel-i_mtime-only.patch
 	patches.suse/fuse-0052-fuse-Flush-files-on-wb-close.patch
 	patches.suse/fuse-0053-fuse-restructure-fuse_readpage.patch
+	patches.suse/fuse-0054-fuse-Implement-write_begin-write_end-callbacks.patch
 
 	########################################################
 	# IPC patches
