fuse: writepages: update bdi writeout when deleting secondary request (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1791,6 +1791,7 @@
 	patches.suse/fuse-0041-fuse-writepage-skip-already-in-flight.patch
 	patches.suse/fuse-0042-fuse-writepages-roll-back-changes-if-request-not-fou.patch
 	patches.suse/fuse-0043-fuse-writepages-crop-secondary-requests.patch
+	patches.suse/fuse-0044-fuse-writepages-update-bdi-writeout-when-deleting-se.patch
 
 	########################################################
 	# IPC patches
