--- a/series.conf
+++ b/series.conf
@@ -1805,6 +1805,7 @@
 	patches.suse/fuse-0055-fuse-fuse_flush-should-wait-on-writeback.patch
 	patches.suse/fuse-0056-fuse-Fix-O_DIRECT-operations-vs-cached-writeback-mis.patch
 	patches.suse/fuse-0057-fuse-Turn-writeback-cache-on.patch
+	patches.suse/fuse-0058-fuse-fix-mtime-update-error-in-fsync.patch
 
 	########################################################
 	# IPC patches
