fuse: hotfix truncate_pagecache() issue (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1779,6 +1779,7 @@
 	patches.suse/fuse-0029-fuse-allocate-for_background-dio-requests-based-on-i.patch
 	patches.suse/fuse-0030-fuse-return-EIOCBQUEUED-from-fuse_direct_IO-for-all-.patch
 	patches.suse/fuse-0031-fuse-fix-alignment-in-short-read-optimization-for-as.patch
+	patches.suse/fuse-0032-fuse-hotfix-truncate_pagecache-issue.patch
 
 	########################################################
 	# IPC patches
