fuse: clear FUSE_I_CTIME_DIRTY flag on setattr (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1815,6 +1815,7 @@
 	patches.suse/fuse-0065-fuse-allow-ctime-flushing-to-userspace.patch
 	patches.suse/fuse-0066-fuse-remove-.update_time.patch
 	patches.suse/fuse-0067-fuse-trust-kernel-i_ctime-only.patch
+	patches.suse/fuse-0068-fuse-clear-FUSE_I_CTIME_DIRTY-flag-on-setattr.patch
 
 	########################################################
 	# IPC patches
