fuse: writepages: fix aggregation (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1786,6 +1786,7 @@
 	patches.suse/fuse-0036-fuse-don-t-BUG-on-no-write-file.patch
 	patches.suse/fuse-0037-fuse-Implement-writepages-callback.patch
 	patches.suse/fuse-0038-fuse-fix-race-in-fuse_writepages.patch
+	patches.suse/fuse-0039-fuse-writepages-fix-aggregation.patch
 
 	########################################################
 	# IPC patches
