--- a/series.conf
+++ b/series.conf
@@ -1788,6 +1788,7 @@
 	patches.suse/fuse-0038-fuse-fix-race-in-fuse_writepages.patch
 	patches.suse/fuse-0039-fuse-writepages-fix-aggregation.patch
 	patches.suse/fuse-0040-fuse-writepages-handle-same-page-rewrites.patch
+	patches.suse/fuse-0041-fuse-writepage-skip-already-in-flight.patch
 
 	########################################################
 	# IPC patches
