--- a/series.conf
+++ b/series.conf
@@ -1795,6 +1795,7 @@
 	patches.suse/fuse-0045-fuse-writepages-protect-secondary-requests-from-fuse.patch
 	patches.suse/fuse-0046-fuse-don-t-invalidate-attrs-when-not-using-atime.patch
 	patches.suse/fuse-0047-fuse-Linking-file-to-inode-helper.patch
+	patches.suse/fuse-0048-fuse-Prepare-to-handle-short-reads.patch
 
 	########################################################
 	# IPC patches
