fuse: enable asynchronous processing direct IO (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1772,6 +1772,7 @@
 	patches.suse/fuse-0022-fuse-move-fuse_release_user_pages-up.patch
 	patches.suse/fuse-0023-fuse-add-support-of-async-IO.patch
 	patches.suse/fuse-0024-fuse-make-fuse_direct_io-aware-about-AIO.patch
+	patches.suse/fuse-0025-fuse-enable-asynchronous-processing-direct-IO.patch
 
 	########################################################
 	# IPC patches
