fuse: categorize fuse_get_req() (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1753,6 +1753,7 @@
 	patches.suse/fuse-0003-fuse-fix-nlink-after-unlink.patch
 	patches.suse/fuse-0004-fuse-fix-blksize-calculation.patch
 	patches.suse/fuse-0005-fuse-general-infrastructure-for-pages-of-variable-si.patch
+	patches.suse/fuse-0006-fuse-categorize-fuse_get_req.patch
 
 	########################################################
 	# IPC patches
