fuse: add flag to turn on async direct IO (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1775,6 +1775,7 @@
 	patches.suse/fuse-0025-fuse-enable-asynchronous-processing-direct-IO.patch
 	patches.suse/fuse-0026-fuse-optimize-short-direct-reads.patch
 	patches.suse/fuse-0027-fuse-truncate-file-if-async-dio-failed.patch
+	patches.suse/fuse-0028-fuse-add-flag-to-turn-on-async-direct-IO.patch
 
 	########################################################
 	# IPC patches
