--- a/series.conf
+++ b/series.conf
@@ -1778,6 +1778,7 @@
 	patches.suse/fuse-0028-fuse-add-flag-to-turn-on-async-direct-IO.patch
 	patches.suse/fuse-0029-fuse-allocate-for_background-dio-requests-based-on-i.patch
 	patches.suse/fuse-0030-fuse-return-EIOCBQUEUED-from-fuse_direct_IO-for-all-.patch
+	patches.suse/fuse-0031-fuse-fix-alignment-in-short-read-optimization-for-as.patch
 
 	########################################################
 	# IPC patches
