fuse: fix nlink after unlink (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1750,6 +1750,7 @@
 	patches.suse/mm-minor-cleanup-of-iov_iter_single_seg_count.patch
 	patches.suse/fuse-0001-fuse-delete-dead-.write_begin-and-.write_end-aops.patch
 	patches.suse/fuse-0002-fuse-O_DIRECT-support-for-files.patch
+	patches.suse/fuse-0003-fuse-fix-nlink-after-unlink.patch
 
 	########################################################
 	# IPC patches
