fuse: fix blksize calculation (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1751,6 +1751,7 @@
 	patches.suse/fuse-0001-fuse-delete-dead-.write_begin-and-.write_end-aops.patch
 	patches.suse/fuse-0002-fuse-O_DIRECT-support-for-files.patch
 	patches.suse/fuse-0003-fuse-fix-nlink-after-unlink.patch
+	patches.suse/fuse-0004-fuse-fix-blksize-calculation.patch
 
 	########################################################
 	# IPC patches
