fuse: update mtime on open(O_TRUNC) in atomic_o_trunc mode (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1808,6 +1808,7 @@
 	patches.suse/fuse-0058-fuse-fix-mtime-update-error-in-fsync.patch
 	patches.suse/fuse-0059-fuse-do-not-use-uninitialized-i_mode.patch
 	patches.suse/fuse-0060-fuse-update-mtime-on-truncate-2.patch
+	patches.suse/fuse-0061-fuse-update-mtime-on-open-O_TRUNC-in-atomic_o_trunc-.patch
 
 	########################################################
 	# IPC patches
