fuse: allocate for_background dio requests based on io->async state (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1776,6 +1776,7 @@
 	patches.suse/fuse-0026-fuse-optimize-short-direct-reads.patch
 	patches.suse/fuse-0027-fuse-truncate-file-if-async-dio-failed.patch
 	patches.suse/fuse-0028-fuse-add-flag-to-turn-on-async-direct-IO.patch
+	patches.suse/fuse-0029-fuse-allocate-for_background-dio-requests-based-on-i.patch
 
 	########################################################
 	# IPC patches
