fuse: writepages: crop secondary requests (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1790,6 +1790,7 @@
 	patches.suse/fuse-0040-fuse-writepages-handle-same-page-rewrites.patch
 	patches.suse/fuse-0041-fuse-writepage-skip-already-in-flight.patch
 	patches.suse/fuse-0042-fuse-writepages-roll-back-changes-if-request-not-fou.patch
+	patches.suse/fuse-0043-fuse-writepages-crop-secondary-requests.patch
 
 	########################################################
 	# IPC patches
