fuse: writepages: roll back changes if request not found (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1789,6 +1789,7 @@
 	patches.suse/fuse-0039-fuse-writepages-fix-aggregation.patch
 	patches.suse/fuse-0040-fuse-writepages-handle-same-page-rewrites.patch
 	patches.suse/fuse-0041-fuse-writepage-skip-already-in-flight.patch
+	patches.suse/fuse-0042-fuse-writepages-roll-back-changes-if-request-not-fou.patch
 
 	########################################################
 	# IPC patches
