fuse: Fix O_DIRECT operations vs cached writeback misorder (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1803,6 +1803,7 @@
 	patches.suse/fuse-0053-fuse-restructure-fuse_readpage.patch
 	patches.suse/fuse-0054-fuse-Implement-write_begin-write_end-callbacks.patch
 	patches.suse/fuse-0055-fuse-fuse_flush-should-wait-on-writeback.patch
+	patches.suse/fuse-0056-fuse-Fix-O_DIRECT-operations-vs-cached-writeback-mis.patch
 
 	########################################################
 	# IPC patches
