fuse: clean up fsync (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1809,6 +1809,7 @@
 	patches.suse/fuse-0059-fuse-do-not-use-uninitialized-i_mode.patch
 	patches.suse/fuse-0060-fuse-update-mtime-on-truncate-2.patch
 	patches.suse/fuse-0061-fuse-update-mtime-on-open-O_TRUNC-in-atomic_o_trunc-.patch
+	patches.suse/fuse-0062-fuse-clean-up-fsync.patch
 
 	########################################################
 	# IPC patches
