mm/page-writeback.c: add strictlimit feature (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1745,6 +1745,9 @@
 	# add /tmp symlink attack protection
 	patches.suse/fs-add-link-restrictions.patch
 
+	# fate#317677: fuse update
+	patches.suse/mm-page-writeback.c-add-strictlimit-feature.patch
+
 	########################################################
 	# IPC patches
 	########################################################
