--- a/series.conf
+++ b/series.conf
@@ -1747,6 +1747,7 @@
 
 	# fate#317677: fuse update
 	patches.suse/mm-page-writeback.c-add-strictlimit-feature.patch
+	patches.suse/mm-minor-cleanup-of-iov_iter_single_seg_count.patch
 
 	########################################################
 	# IPC patches
