--- a/series.conf
+++ b/series.conf
@@ -1768,6 +1768,7 @@
 	patches.suse/fuse-0018-fuse-add-flag-fc-initialized.patch
 	patches.suse/fuse-0019-fuse-skip-blocking-on-allocations-of-synchronous-req.patch
 	patches.suse/fuse-0020-fuse-implement-exclusive-wakeup-for-blocked_waitq.patch
+	patches.suse/fuse-0021-fuse-optimize-wake_up.patch
 
 	########################################################
 	# IPC patches
