fuse: skip blocking on allocations of synchronous requests (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1766,6 +1766,7 @@
 	patches.suse/fuse-0016-fuse-cleanup-fuse_direct_io.patch
 	patches.suse/fuse-0017-fuse-make-request-allocations-for-background-process.patch
 	patches.suse/fuse-0018-fuse-add-flag-fc-initialized.patch
+	patches.suse/fuse-0019-fuse-skip-blocking-on-allocations-of-synchronous-req.patch
 
 	########################################################
 	# IPC patches
