fuse: fix race in fuse_writepages() (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1785,6 +1785,7 @@
 	patches.suse/fuse-0035-fuse-lock-page-in-mkwrite.patch
 	patches.suse/fuse-0036-fuse-don-t-BUG-on-no-write-file.patch
 	patches.suse/fuse-0037-fuse-Implement-writepages-callback.patch
+	patches.suse/fuse-0038-fuse-fix-race-in-fuse_writepages.patch
 
 	########################################################
 	# IPC patches
