fuse: move fuse_release_user_pages() up (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1769,6 +1769,7 @@
 	patches.suse/fuse-0019-fuse-skip-blocking-on-allocations-of-synchronous-req.patch
 	patches.suse/fuse-0020-fuse-implement-exclusive-wakeup-for-blocked_waitq.patch
 	patches.suse/fuse-0021-fuse-optimize-wake_up.patch
+	patches.suse/fuse-0022-fuse-move-fuse_release_user_pages-up.patch
 
 	########################################################
 	# IPC patches
