fuse: Linking file to inode helper (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1794,6 +1794,7 @@
 	patches.suse/fuse-0044-fuse-writepages-update-bdi-writeout-when-deleting-se.patch
 	patches.suse/fuse-0045-fuse-writepages-protect-secondary-requests-from-fuse.patch
 	patches.suse/fuse-0046-fuse-don-t-invalidate-attrs-when-not-using-atime.patch
+	patches.suse/fuse-0047-fuse-Linking-file-to-inode-helper.patch
 
 	########################################################
 	# IPC patches
