--- a/series.conf
+++ b/series.conf
@@ -1812,6 +1812,7 @@
 	patches.suse/fuse-0062-fuse-clean-up-fsync.patch
 	patches.suse/fuse-0063-fuse-add-.write_inode.patch
 	patches.suse/fuse-0064-fuse-fuse-add-time_gran-to-INIT_OUT.patch
+	patches.suse/fuse-0065-fuse-allow-ctime-flushing-to-userspace.patch
 
 	########################################################
 	# IPC patches
