fuse: optimize short direct reads (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1773,6 +1773,7 @@
 	patches.suse/fuse-0023-fuse-add-support-of-async-IO.patch
 	patches.suse/fuse-0024-fuse-make-fuse_direct_io-aware-about-AIO.patch
 	patches.suse/fuse-0025-fuse-enable-asynchronous-processing-direct-IO.patch
+	patches.suse/fuse-0026-fuse-optimize-short-direct-reads.patch
 
 	########################################################
 	# IPC patches
