fuse: Trust kernel i_mtime only (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1798,6 +1798,7 @@
 	patches.suse/fuse-0048-fuse-Prepare-to-handle-short-reads.patch
 	patches.suse/fuse-0049-fuse-Connection-bit-for-enabling-writeback.patch
 	patches.suse/fuse-0050-fuse-Trust-kernel-i_size-only.patch
+	patches.suse/fuse-0051-fuse-Trust-kernel-i_mtime-only.patch
 
 	########################################################
 	# IPC patches
