fuse: rework fuse_readpages() (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1755,6 +1755,7 @@
 	patches.suse/fuse-0005-fuse-general-infrastructure-for-pages-of-variable-si.patch
 	patches.suse/fuse-0006-fuse-categorize-fuse_get_req.patch
 	patches.suse/fuse-0007-fuse-rework-fuse_retrieve.patch
+	patches.suse/fuse-0008-fuse-rework-fuse_readpages.patch
 
 	########################################################
 	# IPC patches
