--- a/series.conf
+++ b/series.conf
@@ -1783,6 +1783,7 @@
 	patches.suse/fuse-0033-fuse-Getting-file-for-writeback-helper.patch
 	patches.suse/fuse-0034-fuse-Prepare-to-handle-multiple-pages-in-writeback.patch
 	patches.suse/fuse-0035-fuse-lock-page-in-mkwrite.patch
+	patches.suse/fuse-0036-fuse-don-t-BUG-on-no-write-file.patch
 
 	########################################################
 	# IPC patches
