--- a/series.conf
+++ b/series.conf
@@ -1760,6 +1760,7 @@
 	patches.suse/fuse-0010-fuse-rework-fuse_do_ioctl.patch
 	patches.suse/fuse-0011-fuse-add-per-page-descriptor-offset-length-to-fuse_r.patch
 	patches.suse/fuse-0012-fuse-use-req-page_descs-for-argpages-cases.patch
+	patches.suse/fuse-0013-fuse-pass-iov-to-fuse_get_user_pages.patch
 
 	########################################################
 	# IPC patches
