fuse: writepages: protect secondary requests from fuse file release (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1792,6 +1792,7 @@
 	patches.suse/fuse-0042-fuse-writepages-roll-back-changes-if-request-not-fou.patch
 	patches.suse/fuse-0043-fuse-writepages-crop-secondary-requests.patch
 	patches.suse/fuse-0044-fuse-writepages-update-bdi-writeout-when-deleting-se.patch
+	patches.suse/fuse-0045-fuse-writepages-protect-secondary-requests-from-fuse.patch
 
 	########################################################
 	# IPC patches
