--- a/series.conf
+++ b/series.conf
@@ -1804,6 +1804,7 @@
 	patches.suse/fuse-0054-fuse-Implement-write_begin-write_end-callbacks.patch
 	patches.suse/fuse-0055-fuse-fuse_flush-should-wait-on-writeback.patch
 	patches.suse/fuse-0056-fuse-Fix-O_DIRECT-operations-vs-cached-writeback-mis.patch
+	patches.suse/fuse-0057-fuse-Turn-writeback-cache-on.patch
 
 	########################################################
 	# IPC patches
