fuse: Prepare to handle multiple pages in writeback (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1781,6 +1781,7 @@
 	patches.suse/fuse-0031-fuse-fix-alignment-in-short-read-optimization-for-as.patch
 	patches.suse/fuse-0032-fuse-hotfix-truncate_pagecache-issue.patch
 	patches.suse/fuse-0033-fuse-Getting-file-for-writeback-helper.patch
+	patches.suse/fuse-0034-fuse-Prepare-to-handle-multiple-pages-in-writeback.patch
 
 	########################################################
 	# IPC patches
