fuse: add .write_inode (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1810,6 +1810,7 @@
 	patches.suse/fuse-0060-fuse-update-mtime-on-truncate-2.patch
 	patches.suse/fuse-0061-fuse-update-mtime-on-open-O_TRUNC-in-atomic_o_trunc-.patch
 	patches.suse/fuse-0062-fuse-clean-up-fsync.patch
+	patches.suse/fuse-0063-fuse-add-.write_inode.patch
 
 	########################################################
 	# IPC patches
