fuse: Connection bit for enabling writeback (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1796,6 +1796,7 @@
 	patches.suse/fuse-0046-fuse-don-t-invalidate-attrs-when-not-using-atime.patch
 	patches.suse/fuse-0047-fuse-Linking-file-to-inode-helper.patch
 	patches.suse/fuse-0048-fuse-Prepare-to-handle-short-reads.patch
+	patches.suse/fuse-0049-fuse-Connection-bit-for-enabling-writeback.patch
 
 	########################################################
 	# IPC patches
