fuse: rework fuse_do_ioctl() (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1757,6 +1757,7 @@
 	patches.suse/fuse-0007-fuse-rework-fuse_retrieve.patch
 	patches.suse/fuse-0008-fuse-rework-fuse_readpages.patch
 	patches.suse/fuse-0009-fuse-rework-fuse_perform_write.patch
+	patches.suse/fuse-0010-fuse-rework-fuse_do_ioctl.patch
 
 	########################################################
 	# IPC patches
