fuse: rework fuse_retrieve() (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1754,6 +1754,7 @@
 	patches.suse/fuse-0004-fuse-fix-blksize-calculation.patch
 	patches.suse/fuse-0005-fuse-general-infrastructure-for-pages-of-variable-si.patch
 	patches.suse/fuse-0006-fuse-categorize-fuse_get_req.patch
+	patches.suse/fuse-0007-fuse-rework-fuse_retrieve.patch
 
 	########################################################
 	# IPC patches
