fuse: restructure fuse_readpage() (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1800,6 +1800,7 @@
 	patches.suse/fuse-0050-fuse-Trust-kernel-i_size-only.patch
 	patches.suse/fuse-0051-fuse-Trust-kernel-i_mtime-only.patch
 	patches.suse/fuse-0052-fuse-Flush-files-on-wb-close.patch
+	patches.suse/fuse-0053-fuse-restructure-fuse_readpage.patch
 
 	########################################################
 	# IPC patches
