fuse: implement exclusive wakeup for blocked_waitq (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1767,6 +1767,7 @@
 	patches.suse/fuse-0017-fuse-make-request-allocations-for-background-process.patch
 	patches.suse/fuse-0018-fuse-add-flag-fc-initialized.patch
 	patches.suse/fuse-0019-fuse-skip-blocking-on-allocations-of-synchronous-req.patch
+	patches.suse/fuse-0020-fuse-implement-exclusive-wakeup-for-blocked_waitq.patch
 
 	########################################################
 	# IPC patches
