fuse: fuse: add time_gran to INIT_OUT (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1811,6 +1811,7 @@
 	patches.suse/fuse-0061-fuse-update-mtime-on-open-O_TRUNC-in-atomic_o_trunc-.patch
 	patches.suse/fuse-0062-fuse-clean-up-fsync.patch
 	patches.suse/fuse-0063-fuse-add-.write_inode.patch
+	patches.suse/fuse-0064-fuse-fuse-add-time_gran-to-INIT_OUT.patch
 
 	########################################################
 	# IPC patches
