fuse: trust kernel i_ctime only (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1814,6 +1814,7 @@
 	patches.suse/fuse-0064-fuse-fuse-add-time_gran-to-INIT_OUT.patch
 	patches.suse/fuse-0065-fuse-allow-ctime-flushing-to-userspace.patch
 	patches.suse/fuse-0066-fuse-remove-.update_time.patch
+	patches.suse/fuse-0067-fuse-trust-kernel-i_ctime-only.patch
 
 	########################################################
 	# IPC patches
