--- a/series.conf
+++ b/series.conf
@@ -1787,6 +1787,7 @@
 	patches.suse/fuse-0037-fuse-Implement-writepages-callback.patch
 	patches.suse/fuse-0038-fuse-fix-race-in-fuse_writepages.patch
 	patches.suse/fuse-0039-fuse-writepages-fix-aggregation.patch
+	patches.suse/fuse-0040-fuse-writepages-handle-same-page-rewrites.patch
 
 	########################################################
 	# IPC patches
