fuse: make fuse_direct_io() aware about AIO (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1771,6 +1771,7 @@
 	patches.suse/fuse-0021-fuse-optimize-wake_up.patch
 	patches.suse/fuse-0022-fuse-move-fuse_release_user_pages-up.patch
 	patches.suse/fuse-0023-fuse-add-support-of-async-IO.patch
+	patches.suse/fuse-0024-fuse-make-fuse_direct_io-aware-about-AIO.patch
 
 	########################################################
 	# IPC patches
