--- a/series.conf
+++ b/series.conf
@@ -1799,6 +1799,7 @@
 	patches.suse/fuse-0049-fuse-Connection-bit-for-enabling-writeback.patch
 	patches.suse/fuse-0050-fuse-Trust-kernel-i_size-only.patch
 	patches.suse/fuse-0051-fuse-Trust-kernel-i_mtime-only.patch
+	patches.suse/fuse-0052-fuse-Flush-files-on-wb-close.patch
 
 	########################################################
 	# IPC patches
