fuse: make request allocations for background processing explicit (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1764,6 +1764,7 @@
 	patches.suse/fuse-0014-fuse-optimize-fuse_get_user_pages.patch
 	patches.suse/fuse-0015-fuse-optimize-__fuse_direct_io.patch
 	patches.suse/fuse-0016-fuse-cleanup-fuse_direct_io.patch
+	patches.suse/fuse-0017-fuse-make-request-allocations-for-background-process.patch
 
 	########################################################
 	# IPC patches
