fuse: general infrastructure for pages of variable size (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1752,6 +1752,7 @@
 	patches.suse/fuse-0002-fuse-O_DIRECT-support-for-files.patch
 	patches.suse/fuse-0003-fuse-fix-nlink-after-unlink.patch
 	patches.suse/fuse-0004-fuse-fix-blksize-calculation.patch
+	patches.suse/fuse-0005-fuse-general-infrastructure-for-pages-of-variable-si.patch
 
 	########################################################
 	# IPC patches
