--- a/series.conf
+++ b/series.conf
@@ -1782,6 +1782,7 @@
 	patches.suse/fuse-0032-fuse-hotfix-truncate_pagecache-issue.patch
 	patches.suse/fuse-0033-fuse-Getting-file-for-writeback-helper.patch
 	patches.suse/fuse-0034-fuse-Prepare-to-handle-multiple-pages-in-writeback.patch
+	patches.suse/fuse-0035-fuse-lock-page-in-mkwrite.patch
 
 	########################################################
 	# IPC patches
