--- a/series.conf
+++ b/series.conf
@@ -1748,6 +1748,7 @@
 	# fate#317677: fuse update
 	patches.suse/mm-page-writeback.c-add-strictlimit-feature.patch
 	patches.suse/mm-minor-cleanup-of-iov_iter_single_seg_count.patch
+	patches.suse/fuse-0001-fuse-delete-dead-.write_begin-and-.write_end-aops.patch
 
 	########################################################
 	# IPC patches
