fuse: rework fuse_perform_write() (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1756,6 +1756,7 @@
 	patches.suse/fuse-0006-fuse-categorize-fuse_get_req.patch
 	patches.suse/fuse-0007-fuse-rework-fuse_retrieve.patch
 	patches.suse/fuse-0008-fuse-rework-fuse_readpages.patch
+	patches.suse/fuse-0009-fuse-rework-fuse_perform_write.patch
 
 	########################################################
 	# IPC patches
