fuse: update mtime on truncate(2) (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1807,6 +1807,7 @@
 	patches.suse/fuse-0057-fuse-Turn-writeback-cache-on.patch
 	patches.suse/fuse-0058-fuse-fix-mtime-update-error-in-fsync.patch
 	patches.suse/fuse-0059-fuse-do-not-use-uninitialized-i_mode.patch
+	patches.suse/fuse-0060-fuse-update-mtime-on-truncate-2.patch
 
 	########################################################
 	# IPC patches
