fuse: use req->page_descs for argpages cases (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1759,6 +1759,7 @@
 	patches.suse/fuse-0009-fuse-rework-fuse_perform_write.patch
 	patches.suse/fuse-0010-fuse-rework-fuse_do_ioctl.patch
 	patches.suse/fuse-0011-fuse-add-per-page-descriptor-offset-length-to-fuse_r.patch
+	patches.suse/fuse-0012-fuse-use-req-page_descs-for-argpages-cases.patch
 
 	########################################################
 	# IPC patches
