fuse: Getting file for writeback helper (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1780,6 +1780,7 @@
 	patches.suse/fuse-0030-fuse-return-EIOCBQUEUED-from-fuse_direct_IO-for-all-.patch
 	patches.suse/fuse-0031-fuse-fix-alignment-in-short-read-optimization-for-as.patch
 	patches.suse/fuse-0032-fuse-hotfix-truncate_pagecache-issue.patch
+	patches.suse/fuse-0033-fuse-Getting-file-for-writeback-helper.patch
 
 	########################################################
 	# IPC patches
