fuse: optimize __fuse_direct_io() (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1762,6 +1762,7 @@
 	patches.suse/fuse-0012-fuse-use-req-page_descs-for-argpages-cases.patch
 	patches.suse/fuse-0013-fuse-pass-iov-to-fuse_get_user_pages.patch
 	patches.suse/fuse-0014-fuse-optimize-fuse_get_user_pages.patch
+	patches.suse/fuse-0015-fuse-optimize-__fuse_direct_io.patch
 
 	########################################################
 	# IPC patches
