--- a/series.conf
+++ b/series.conf
@@ -1793,6 +1793,7 @@
 	patches.suse/fuse-0043-fuse-writepages-crop-secondary-requests.patch
 	patches.suse/fuse-0044-fuse-writepages-update-bdi-writeout-when-deleting-se.patch
 	patches.suse/fuse-0045-fuse-writepages-protect-secondary-requests-from-fuse.patch
+	patches.suse/fuse-0046-fuse-don-t-invalidate-attrs-when-not-using-atime.patch
 
 	########################################################
 	# IPC patches
