fuse: O_DIRECT support for files (FATE#317677).

--- a/series.conf
+++ b/series.conf
@@ -1749,6 +1749,7 @@
 	patches.suse/mm-page-writeback.c-add-strictlimit-feature.patch
 	patches.suse/mm-minor-cleanup-of-iov_iter_single_seg_count.patch
 	patches.suse/fuse-0001-fuse-delete-dead-.write_begin-and-.write_end-aops.patch
+	patches.suse/fuse-0002-fuse-O_DIRECT-support-for-files.patch
 
 	########################################################
 	# IPC patches
