--- a/series.conf
+++ b/series.conf
@@ -11241,6 +11241,7 @@
 	patches.drivers/qib-0057-ib-qib-fix-checkpatch-_packed-warnings.patch
 	patches.drivers/qib-0058-ib-qib-fix-qp-check-when-looping-back-to-from-qp1.patch
 	patches.drivers/qib-0059-ib-qib-fix-txselect-regression.patch
+	patches.drivers/qib-0060-ib-qib-add-missing-serdes-init-sequence.patch
 
 	patches.drivers/ib-qib-fix-sparse-warning-fix.patch
 
