IB/qib: Correct reference counting in debugfs qp_stats (bnc#904858).

--- a/series.conf
+++ b/series.conf
@@ -11251,6 +11251,7 @@
 	patches.drivers/qib-0067-ib-qib-add-qp_stats-debug-file.patch
 	patches.drivers/qib-0068-ib-qib-fix-memory-leak-of-recv-context-when-driver-fails-to-initialize.patch
 	patches.drivers/qib-0069-ib-qib-fix-port-in-pkey-change-event.patch
+	patches.drivers/qib-0070-ib-qib-correct-reference-counting-in-debugfs-qp_stats.patch
 
 	patches.drivers/ib-qib-fix-sparse-warning-fix.patch
 
