IB/qib: Remove ib_sg_dma_address() and ib_sg_dma_len() overloads (bnc#904858).

--- a/series.conf
+++ b/series.conf
@@ -11245,6 +11245,7 @@
 	patches.drivers/qib-0061-ib-qib-fix-potential-buffer-overrun-in-sending-diag-packet-routine.patch
 	patches.drivers/qib-0062-ib-qib-add-percpu-counter-replacing-qib_devdata-int_counter.patch
 	patches.drivers/qib-0063-ib-qib-fix-debugfs-ordering-issue-with-multiple-hcas.patch
+	patches.drivers/qib-0064-ib-qib-remove-ib_sg_dma_address-and-ib_sg_dma_len-overloads.patch
 
 	patches.drivers/ib-qib-fix-sparse-warning-fix.patch
 
