IB/qib: Convert opcode counters to per-context (bnc#904858).

--- a/series.conf
+++ b/series.conf
@@ -11235,6 +11235,7 @@
 	patches.drivers/qib-51-add-a-qib-driver-version
 	patches.drivers/qib-52-fix-local-access-validation-for-user-mrs
 	patches.drivers/qib-0053-ib-qib-add-optional-numa-affinity.patch
+	patches.drivers/qib-0054-ib-qib-convert-opcode-counters-to-per-context.patch
 
 	patches.drivers/ib-qib-fix-sparse-warning-fix.patch
 
