--- a/series.conf
+++ b/series.conf
@@ -11243,6 +11243,7 @@
 	patches.drivers/qib-0059-ib-qib-fix-txselect-regression.patch
 	patches.drivers/qib-0060-ib-qib-add-missing-serdes-init-sequence.patch
 	patches.drivers/qib-0061-ib-qib-fix-potential-buffer-overrun-in-sending-diag-packet-routine.patch
+	patches.drivers/qib-0062-ib-qib-add-percpu-counter-replacing-qib_devdata-int_counter.patch
 
 	patches.drivers/ib-qib-fix-sparse-warning-fix.patch
 
