IB/qib: Fix checkpatch __packed warnings (bnc#904858).

--- a/series.conf
+++ b/series.conf
@@ -11238,6 +11238,7 @@
 	patches.drivers/qib-0054-ib-qib-convert-opcode-counters-to-per-context.patch
 	patches.drivers/qib-0055-ib-qib-improve-sdma-performance.patch
 	patches.drivers/qib-0056-ib-qib-convert-qib_user_sdma_pin_pages-to-use-get_user_pages_fast.patch
+	patches.drivers/qib-0057-ib-qib-fix-checkpatch-_packed-warnings.patch
 
 	patches.drivers/ib-qib-fix-sparse-warning-fix.patch
 
