IB/qib: Add qp_stats debug file (bnc#904858).

--- a/series.conf
+++ b/series.conf
@@ -11248,6 +11248,7 @@
 	patches.drivers/qib-0064-ib-qib-remove-ib_sg_dma_address-and-ib_sg_dma_len-overloads.patch
 	patches.drivers/qib-0065-ib-qib-modify-software-pma-counters-to-use-percpu-variables.patch
 	patches.drivers/qib-0066-ib-qib-add-per-context-stats-interface.patch
+	patches.drivers/qib-0067-ib-qib-add-qp_stats-debug-file.patch
 
 	patches.drivers/ib-qib-fix-sparse-warning-fix.patch
 
