--- a/series.conf
+++ b/series.conf
@@ -11237,6 +11237,7 @@
 	patches.drivers/qib-0053-ib-qib-add-optional-numa-affinity.patch
 	patches.drivers/qib-0054-ib-qib-convert-opcode-counters-to-per-context.patch
 	patches.drivers/qib-0055-ib-qib-improve-sdma-performance.patch
+	patches.drivers/qib-0056-ib-qib-convert-qib_user_sdma_pin_pages-to-use-get_user_pages_fast.patch
 
 	patches.drivers/ib-qib-fix-sparse-warning-fix.patch
 
