--- a/series.conf
+++ b/series.conf
@@ -11234,6 +11234,7 @@
 	patches.drivers/qib-50-fix-failure-of-compliance-test-c14-024-06_localportnum
 	patches.drivers/qib-51-add-a-qib-driver-version
 	patches.drivers/qib-52-fix-local-access-validation-for-user-mrs
+	patches.drivers/qib-0053-ib-qib-add-optional-numa-affinity.patch
 
 	patches.drivers/ib-qib-fix-sparse-warning-fix.patch
 
