--- a/series.conf
+++ b/series.conf
@@ -11239,6 +11239,7 @@
 	patches.drivers/qib-0055-ib-qib-improve-sdma-performance.patch
 	patches.drivers/qib-0056-ib-qib-convert-qib_user_sdma_pin_pages-to-use-get_user_pages_fast.patch
 	patches.drivers/qib-0057-ib-qib-fix-checkpatch-_packed-warnings.patch
+	patches.drivers/qib-0058-ib-qib-fix-qp-check-when-looping-back-to-from-qp1.patch
 
 	patches.drivers/ib-qib-fix-sparse-warning-fix.patch
 
