--- a/series.conf
+++ b/series.conf
@@ -11247,6 +11247,7 @@
 	patches.drivers/qib-0063-ib-qib-fix-debugfs-ordering-issue-with-multiple-hcas.patch
 	patches.drivers/qib-0064-ib-qib-remove-ib_sg_dma_address-and-ib_sg_dma_len-overloads.patch
 	patches.drivers/qib-0065-ib-qib-modify-software-pma-counters-to-use-percpu-variables.patch
+	patches.drivers/qib-0066-ib-qib-add-per-context-stats-interface.patch
 
 	patches.drivers/ib-qib-fix-sparse-warning-fix.patch
 
