--- a/series.conf
+++ b/series.conf
@@ -11246,6 +11246,7 @@
 	patches.drivers/qib-0062-ib-qib-add-percpu-counter-replacing-qib_devdata-int_counter.patch
 	patches.drivers/qib-0063-ib-qib-fix-debugfs-ordering-issue-with-multiple-hcas.patch
 	patches.drivers/qib-0064-ib-qib-remove-ib_sg_dma_address-and-ib_sg_dma_len-overloads.patch
+	patches.drivers/qib-0065-ib-qib-modify-software-pma-counters-to-use-percpu-variables.patch
 
 	patches.drivers/ib-qib-fix-sparse-warning-fix.patch
 
