--- a/series.conf
+++ b/series.conf
@@ -11249,6 +11249,7 @@
 	patches.drivers/qib-0065-ib-qib-modify-software-pma-counters-to-use-percpu-variables.patch
 	patches.drivers/qib-0066-ib-qib-add-per-context-stats-interface.patch
 	patches.drivers/qib-0067-ib-qib-add-qp_stats-debug-file.patch
+	patches.drivers/qib-0068-ib-qib-fix-memory-leak-of-recv-context-when-driver-fails-to-initialize.patch
 
 	patches.drivers/ib-qib-fix-sparse-warning-fix.patch
 
