--- a/series.conf
+++ b/series.conf
@@ -1231,6 +1231,8 @@
 	patches.arch/s390-sles11sp3-26-02-vdso-thread-cputime.patch
 	patches.arch/s390-sles11sp3-26-03-zcrypt-ap-max-domain-id.patch
 
+	patches.arch/s390-sles11sp4-01-01-dasd-retry-partition-detection.patch
+
 	########################################################
 	# VM/FS patches
 	########################################################
