--- a/series.conf
+++ b/series.conf
@@ -14748,6 +14748,7 @@
 	patches.drivers/ixgbe-0118-ixgbe-Indicate-removal-state-explicitly.patch
 	patches.drivers/ixgbe-0119-ixbge-Protect-ixgbe_down-with-__IXGBE_DOWN-bit.patch
 	patches.drivers/ixgbe-0120-ixgbe-Use-static-inlines-instead-of-macros.patch
+	patches.drivers/ixgbe-0121-ixgbe-Make-ethtool-register-test-use-accessors.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
