ixgbe: don't check NULL for debugfs_remove_recursive (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14811,6 +14811,7 @@
 	patches.drivers/ixgbe-0181-ixgbe-fix-checkpatch-style-of-blank-line-after-decla.patch
 	patches.drivers/ixgbe-0182-ixgbe-fix-several-concatenated-strings-to-single-lin.patch
 	patches.drivers/ixgbe-0183-ixgbe-add-braces-around-else-block.patch
+	patches.drivers/ixgbe-0184-ixgbe-don-t-check-NULL-for-debugfs_remove_recursive.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
