ixgbe: enable devices with internal switch to read pci parent (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14681,6 +14681,7 @@
 	patches.drivers/ixgbe-0051-ixgbe-Drop-check-for-PAGE_SIZE-from-ixgbe_xmit_frame.patch
 	patches.drivers/ixgbe-0052-ixgbe-Enable-support-for-recognizing-PCI-e-Gen3-link.patch
 	patches.drivers/ixgbe-0053-ixgbe-create-conversion-functions-from-link_status-t.patch
+	patches.drivers/ixgbe-0054-ixgbe-enable-devices-with-internal-switch-to-read-pc.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
