ixgbe: Reset the NIC if up2tc has changed (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14645,6 +14645,7 @@
 	patches.drivers/ixgbe-0015-ixgbe-Modularize-SR-IOV-enablement-code.patch
 	patches.drivers/ixgbe-0016-ixgbe-Implement-PCI-SR-IOV-sysfs-callback-operation.patch
 	patches.drivers/ixgbe-0017-ixgbe-Limit-number-of-reported-VFs-to-device-specifi.patch
+	patches.drivers/ixgbe-0018-ixgbe-Reset-the-NIC-if-up2tc-has-changed.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
