--- a/series.conf
+++ b/series.conf
@@ -14839,6 +14839,7 @@
 	patches.drivers/ixgbe-0209-ixgbe-Make-return-values-more-direct.patch
 	patches.drivers/ixgbe-0210-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	patches.drivers/ixgbe-0211-ixgbe-flush-when-in-xmit_more-mode-and-under-descrip.patch
+	patches.drivers/ixgbe-0212-ixgbe-Cleanup-FDB-handling-code.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
