--- a/series.conf
+++ b/series.conf
@@ -14819,6 +14819,7 @@
 	patches.drivers/ixgbe-0189-ixgbe-rename-ixgbe_ptp_enable-to-ixgbe_ptp_feature_e.patch
 	patches.drivers/ixgbe-0190-ixgbe-extract-the-hardware-setup-from-the-ixgbe_ptp_.patch
 	patches.drivers/ixgbe-0191-ixgbe-allow-ixgbe_ptp_reset-to-maintain-current-hwts.patch
+	patches.drivers/ixgbe-0192-ixgbe-extract-PTP-clock-device-from-ptp_init.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
