ixgbe: fix register access during ethtool loopback test (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14695,6 +14695,7 @@
 	patches.drivers/ixgbe-0065-ixgbe-add-SFP-LX-module-support.patch
 	patches.drivers/ixgbe-0066-ixgbe-add-WOL-support-for-new-subdevice-ID.patch
 	patches.drivers/ixgbe-0067-ixgbe-fix-EICR-write-in-ixgbe_msix_other.patch
+	patches.drivers/ixgbe-0068-ixgbe-fix-register-access-during-ethtool-loopback-te.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
