ixgbevf: Indicate removal state explicitly (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14916,6 +14916,7 @@
 	patches.drivers/ixgbevf-0047-ixgbevf-fix-skb-pkt_type-checks.patch
 	patches.drivers/ixgbevf-0048-ixgbevf-delete-unneeded-call-to-pci_set_power_state.patch
 	patches.drivers/ixgbevf-0049-net-Replace-u64_stats_fetch_begin_bh-to-u64_stats_fe.patch
+	patches.drivers/ixgbevf-0050-ixgbevf-Indicate-removal-state-explicitly.patch
 
 	########################################################
 	# Wireless Networking
