--- a/series.conf
+++ b/series.conf
@@ -14910,6 +14910,7 @@
 	patches.drivers/ixgbevf-0041-ixgbevf-make-the-first-tx_buffer-a-repository-for-mo.patch
 	patches.drivers/ixgbevf-0042-ixgbevf-redo-dma-mapping-using-the-tx-buffer-info.patch
 	patches.drivers/ixgbevf-0043-ixgbevf-merge-ixgbevf_tx_map-and-ixgbevf_tx_queue-in.patch
+	patches.drivers/ixgbevf-0044-ixgbevf-Use-pci_enable_msix_range-instead-of-pci_ena.patch
 
 	########################################################
 	# Wireless Networking
