ixgbe: Fix possible null-dereference in error path (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14827,6 +14827,7 @@
 	patches.drivers/ixgbe-0197-ixgbe-change-PTP-NSECS_PER_SEC-to-IXGBE_PTP_PPS_HALF.patch
 	patches.drivers/ixgbe-0198-ixgbe-remove-unnecessary-break-after-goto.patch
 	patches.drivers/ixgbe-0199-ixgbe-remove-unnecessary-break-after-return.patch
+	patches.drivers/ixgbe-0200-ixgbe-Fix-possible-null-dereference-in-error-path.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
