--- a/series.conf
+++ b/series.conf
@@ -14898,6 +14898,7 @@
 	patches.drivers/ixgbevf-0029-ixgbe-cleanup-IXGBE_DESC_UNUSED.patch
 	patches.drivers/ixgbevf-0030-ixgbe-Focus-config-of-head-tail-ntc-and-ntu-all-into.patch
 	patches.drivers/ixgbevf-0031-ixgbevf-add-DCB-configuration-into-queue-setup.patch
+	patches.drivers/ixgbevf-0032-ixgbevf-set-the-disable-state-when-ixgbevf_qv_disabl.patch
 
 	########################################################
 	# Wireless Networking
