ixgbe: collect all 82599 AUTOC code in one function (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14764,6 +14764,7 @@
 	patches.drivers/ixgbe-0134-ixgbe-don-t-use-magic-size-number-to-assign-ptp_caps.patch
 	patches.drivers/ixgbe-0135-ixgbe-Add-WoL-support-for-a-new-device.patch
 	patches.drivers/ixgbe-0136-ixgbe-fix-to-use-correct-timeout-interval-for-memory.patch
+	patches.drivers/ixgbe-0137-ixgbe-collect-all-82599-AUTOC-code-in-one-function.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
