ixgbe: fix several concatenated strings to single line (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14809,6 +14809,7 @@
 	patches.drivers/ixgbe-0179-ixgbe-clean-up-checkpatch-warnings-about-CODE_INDENT.patch
 	patches.drivers/ixgbe-0180-ixgbe-fix-function-like-macro-remove-semicolon.patch
 	patches.drivers/ixgbe-0181-ixgbe-fix-checkpatch-style-of-blank-line-after-decla.patch
+	patches.drivers/ixgbe-0182-ixgbe-fix-several-concatenated-strings-to-single-lin.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
