--- a/series.conf
+++ b/series.conf
@@ -14768,6 +14768,7 @@
 	patches.drivers/ixgbe-0138-ixgbe-fix-bit-toggled-for-82599-reset-fix.patch
 	patches.drivers/ixgbe-0139-ixgbe-Add-check-for-FW-veto-bit.patch
 	patches.drivers/ixgbe-0140-ixgbe-Restore-hw_addr-in-LER-recovery-paths.patch
+	patches.drivers/ixgbe-0141-ixgbe-Fix-up-some-ethtool-results-when-adapter-is-re.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
