ixgbe: clear semaphore bits on timeouts (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14712,6 +14712,7 @@
 	patches.fixes/PCI-Add-function-to-obtain-minimum-link-width-and-sp.patch
 	patches.drivers/ixgbe-0083-ixgbe-call-pcie_get_mimimum_link-to-check-if-device-.patch
 	patches.drivers/ixgbe-0084-ixgbe-fix-lockdep-annotation-issue-for-ptp-s-work-it.patch
+	patches.drivers/ixgbe-0085-ixgbe-clear-semaphore-bits-on-timeouts.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
