ixgbevf: redo dma mapping using the tx buffer info (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14908,6 +14908,7 @@
 	patches.drivers/ixgbevf-0039-ixgbevf-remove-counters-for-Tx-Rx-checksum-offload.patch
 	patches.drivers/ixgbevf-0040-ixgbevf-add-tx-counters.patch
 	patches.drivers/ixgbevf-0041-ixgbevf-make-the-first-tx_buffer-a-repository-for-mo.patch
+	patches.drivers/ixgbevf-0042-ixgbevf-redo-dma-mapping-using-the-tx-buffer-info.patch
 
 	########################################################
 	# Wireless Networking
