--- a/series.conf
+++ b/series.conf
@@ -14676,6 +14676,7 @@
 	patches.drivers/ixgbe-0046-ixgbe-Make-use-of-the-default-fdb-handlers.patch
 	patches.drivers/ixgbe-0047-ixgbe-Don-t-give-VFs-random-MAC-addresses.patch
 	patches.drivers/ixgbe-0048-ixgbe-fix-registration-order-of-driver-and-DCA-nofit.patch
+	patches.drivers/ixgbe-0049-ixgbe-Mask-off-check-of-frag_off-as-we-only-want-fra.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
