ixgbe: fix registration order of driver and DCA nofitication (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14675,6 +14675,7 @@
 	patches.fixes/net-generic-fdb-support-for-drivers-without-ndo_fdb_.patch
 	patches.drivers/ixgbe-0046-ixgbe-Make-use-of-the-default-fdb-handlers.patch
 	patches.drivers/ixgbe-0047-ixgbe-Don-t-give-VFs-random-MAC-addresses.patch
+	patches.drivers/ixgbe-0048-ixgbe-fix-registration-order-of-driver-and-DCA-nofit.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
