ixgbe: Fix spurious release of semaphore in EEPROM access (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14832,6 +14832,7 @@
 	patches.drivers/ixgbe-0202-ixgbe-fix-use-of-list_for_each-in-ixgbe_enumerate_fu.patch
 	patches.drivers/ixgbe-0203-ixgbe-don-t-check-minimum-link-when-direct-assigned-.patch
 	patches.drivers/ixgbe-0204-ixgbe-Convert-some-udelays-to-usleep_range.patch
+	patches.drivers/ixgbe-0205-ixgbe-Fix-spurious-release-of-semaphore-in-EEPROM-ac.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
