--- a/series.conf
+++ b/series.conf
@@ -14845,6 +14845,7 @@
 	patches.drivers/ixgbe-0215-ixgbe-Resolve-warnings-produced-in-W-2-builds.patch
 	patches.drivers/ixgbe-0216-ixgbe-Drop-Rx-alloc-at-end-of-Rx-cleanup.patch
 	patches.drivers/ixgbe-0217-ixgbe-remove-useless-bd_number-from-adapter-struct.patch
+	patches.drivers/ixgbe-0218-ixgbe-Do-not-schedule-an-uninitialized-workqueue-ent.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
