--- a/series.conf
+++ b/series.conf
@@ -14775,6 +14775,7 @@
 	patches.drivers/ixgbe-0145-ixgbe-Fix-format-string-in-ixgbe_fcoe.c.patch
 	patches.drivers/ixgbe-0146-ixgbe-move-setting-rx_pb_size-into-get_invariants.patch
 	patches.drivers/ixgbe-0147-ixgbe-add-Linux-NICS-mailing-list-to-contact-info.patch
+	patches.drivers/ixgbe-0148-ixgbe-fixup-header-for-ixgbe_set_rxpba_82598.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
