--- a/series.conf
+++ b/series.conf
@@ -14773,6 +14773,7 @@
 	patches.drivers/ixgbe-0143-ixgbe-implement-SIOCGHWTSTAMP-ioctl.patch
 	patches.drivers/ixgbe-0144-net-ixgbe-calls-skb_set_hash.patch
 	patches.drivers/ixgbe-0145-ixgbe-Fix-format-string-in-ixgbe_fcoe.c.patch
+	patches.drivers/ixgbe-0146-ixgbe-move-setting-rx_pb_size-into-get_invariants.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
