--- a/series.conf
+++ b/series.conf
@@ -14857,6 +14857,7 @@
 	patches.drivers/ixgbe-0227-ixgbe-Convert-the-normal-transmit-complete-path-to-d.patch
 	patches.drivers/ixgbe-0228-ixgbe-remove-wait-loop-on-autoneg-for-copper-devices.patch
 	patches.drivers/ixgbe-0229-ixgbe-fix-setting-of-TXDCTL.WTRHESH-when-ITR-is-set-.patch
+	patches.drivers/ixgbe-0230-ixgbe-fix-race-accessing-page-_count.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
