--- a/series.conf
+++ b/series.conf
@@ -14672,6 +14672,7 @@
 	patches.drivers/ixgbe-0042-ixgbe-cleanup-error-checking-in-ixgbe_identify_sfp_m.patch
 	patches.drivers/ixgbe-0043-ixgbe-fix-Tx-timeouts-with-BQL.patch
 	patches.drivers/ixgbe-0044-ixgbe-Update-DESC_NEEDED-define-to-adjust-for-change.patch
+	patches.fixes/net-generic-fdb-support-for-drivers-without-ndo_fdb_.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
