net: Replace u64_stats_fetch_begin_bh to u64_stats_fetch_begin_irq (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14915,6 +14915,7 @@
 	patches.drivers/ixgbevf-0046-ixgbevf-add-check-for-CHECKSUM_PARTIAL-when-doing-TS.patch
 	patches.drivers/ixgbevf-0047-ixgbevf-fix-skb-pkt_type-checks.patch
 	patches.drivers/ixgbevf-0048-ixgbevf-delete-unneeded-call-to-pci_set_power_state.patch
+	patches.drivers/ixgbevf-0049-net-Replace-u64_stats_fetch_begin_bh-to-u64_stats_fe.patch
 
 	########################################################
 	# Wireless Networking
