ixgbe: allow ixgbe_ptp_reset to maintain current hwtstamp config (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14818,6 +14818,7 @@
 	patches.drivers/ixgbe-0188-ixgbe-fix-linking-at-100Mbps-on-copper-devices-with-.patch
 	patches.drivers/ixgbe-0189-ixgbe-rename-ixgbe_ptp_enable-to-ixgbe_ptp_feature_e.patch
 	patches.drivers/ixgbe-0190-ixgbe-extract-the-hardware-setup-from-the-ixgbe_ptp_.patch
+	patches.drivers/ixgbe-0191-ixgbe-allow-ixgbe_ptp_reset-to-maintain-current-hwts.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
