--- a/series.conf
+++ b/series.conf
@@ -14822,6 +14822,7 @@
 	patches.drivers/ixgbe-0192-ixgbe-extract-PTP-clock-device-from-ptp_init.patch
 	patches.drivers/ixgbe-0193-ixgbe-separate-the-PTP-suspend-and-stop-actions.patch
 	patches.drivers/ixgbe-0194-ixgbe-avoid-duplicate-code-in-suspend-and-stop-paths.patch
+	patches.drivers/ixgbe-0195-ixgbe-fix-detection-of-SFP-capable-interfaces.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
