--- a/series.conf
+++ b/series.conf
@@ -14779,6 +14779,7 @@
 	patches.drivers/ixgbe-0149-ixgbe-fix-some-multiline-hw_dbg-prints.patch
 	patches.drivers/ixgbe-0150-net-Replace-u64_stats_fetch_begin_bh-to-u64_stats_fe.patch
 	patches.drivers/ixgbe-0151-ixgbe-Don-t-receive-packets-when-the-napi-budget-0.patch
+	patches.drivers/ixgbe-0152-ixgbe-add-ixgbe_write_pci_cfg_word-with-ixgbe_remove.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
