--- a/series.conf
+++ b/series.conf
@@ -14796,6 +14796,7 @@
 	patches.drivers/ixgbe-0166-ixgbe-fix-race-conditions-on-queuing-skb-for-HW-time.patch
 	patches.drivers/ixgbe-0167-ixgbe-fix-ixgbe_check_reset_blocked-declaration.patch
 	patches.drivers/ixgbe-0168-ixgbe-Fix-rcu-warnings-induced-by-LER.patch
+	patches.drivers/ixgbe-0169-ixgbe-Add-bit-to-mark-service-task-initialization.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
