ixgbe: Focus config of head, tail ntc, and ntu all into a single function (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14896,6 +14896,7 @@
 	patches.drivers/ixgbevf-0027-ixgbevf-Add-zero_base-handler-to-network-statistics.patch
 	patches.drivers/ixgbevf-0028-ixgbevf-remove-redundant-workaround.patch
 	patches.drivers/ixgbevf-0029-ixgbe-cleanup-IXGBE_DESC_UNUSED.patch
+	patches.drivers/ixgbevf-0030-ixgbe-Focus-config-of-head-tail-ntc-and-ntu-all-into.patch
 
 	########################################################
 	# Wireless Networking
