ixgbe: Drop check for PAGE_SIZE from ixgbe_xmit_frame_ring (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14678,6 +14678,7 @@
 	patches.drivers/ixgbe-0048-ixgbe-fix-registration-order-of-driver-and-DCA-nofit.patch
 	patches.drivers/ixgbe-0049-ixgbe-Mask-off-check-of-frag_off-as-we-only-want-fra.patch
 	patches.drivers/ixgbe-0050-ixgbe-don-t-do-arithmetic-operations-on-bitmasks.patch
+	patches.drivers/ixgbe-0051-ixgbe-Drop-check-for-PAGE_SIZE-from-ixgbe_xmit_frame.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
