--- a/series.conf
+++ b/series.conf
@@ -14649,6 +14649,7 @@
 	patches.drivers/ixgbe-0019-ixgbe-Fix-device-ref-count-bug.patch
 	patches.drivers/ixgbe-0020-ixgbe-rename-autoneg-variables.patch
 	patches.drivers/ixgbe-0021-ixgbe-removed-unused-variable-from-setup_link_speed.patch
+	patches.drivers/ixgbe-0022-ixgbe-autoneg-variable-refactoring.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
