ixgbevf: move ring specific stats into ring specific structure (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14904,6 +14904,7 @@
 	patches.drivers/ixgbevf-0035-ixgbevf-create-function-for-all-of-ring-init.patch
 	patches.drivers/ixgbevf-0036-ixgbevf-bump-version.patch
 	patches.drivers/ixgbevf-0037-ixgbevf-make-use-of-the-dev-pointer-in-the-ixgbevf_r.patch
+	patches.drivers/ixgbevf-0038-ixgbevf-move-ring-specific-stats-into-ring-specific-.patch
 
 	########################################################
 	# Wireless Networking
