ixgbe: Resolve warnings produced in W=2 builds (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14842,6 +14842,7 @@
 	patches.drivers/ixgbe-0212-ixgbe-Cleanup-FDB-handling-code.patch
 	patches.drivers/ixgbe-0213-ixgbe-reset-interface-on-link-loss-with-pending-Tx-w.patch
 	patches.drivers/ixgbe-0214-ixgbe-add-comment-noting-recalculation-of-queues.patch
+	patches.drivers/ixgbe-0215-ixgbe-Resolve-warnings-produced-in-W-2-builds.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
